# BaluScript

./: .gitignore  .gitmodules  .travis.yml  BaluScript.sln  BaluScript.vcxproj  BaluScript.vcxproj.filters  CMakeLists.txt  README.md  appveyor.yml
BindingGen/: BindingGen.cpp  BindingGen.vcxproj  BindingGen.vcxproj.filters  main.cpp
Data/: baluscript.bscript  base_classes_test.bscript  base_types_test.bscript  dyn_array_init_test.bscript  dyn_array_init_test2.bscript  extern_binding.h  int_test.bscript  prepostevents_test.bscript  script1.bscript  script3.bscript  script4.bscript  script5.bscript  script8.bscript  script_methods_test.bscript  template_crossref_test.bscript
Example/: CMakeLists.txt  Example.vcxproj  main.cpp
Examples/Test/: test.cpp
Include/: baluScript.h  common.h
Output/: debug  release  script2.bscript  script7.bscript  script_.bscript
Output/Release/: Test.exp  Test.lib
Source/: BindingGen.cpp  BindingGen.h  arrays.h  class.cpp  common.cpp  common.h  keys.h  lexer.cpp  lexer.h  mballoc.cpp  mballoc.h  memleaks.h  notOptimizedProgram.cpp  notOptimizedProgram.h  semanticAnalyzer.cpp  semanticAnalyzer.h  stdfuncs.h  syntaxAnalyzer.cpp  syntaxAnalyzer.h  vec.h  virtualMachine.cpp  virtualMachine.h
Source/BytecodeBaseOps/: baseOps.cpp  baseOps.h
Source/NativeTypes/: DynArray.cpp  DynArray.h  Ptr.cpp  Ptr.h  StaticArray.cpp  StaticArray.h  String.cpp  String.h  base_types.bscript  base_types.h  base_types_source.bscript  int_type.bscript  stdfuncs.h  vec.h
Test/: Test.vcxproj  Test.vcxproj.filters  stdafx.h  unittest1.cpp
(+211 files in other folders)
